[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysslvpn"
version = "1.0.3"
description = "A pure Python SSL VPN client implementation"
readme = "README.MD"
requires-python = ">=3.7"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "PySslvpn Developer", email = "admin@proyy.com"}
]
keywords = ["vpn", "ssl", "client", "networking", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: Security",
    "Topic :: Internet",
]
dependencies = [
    "tlslite-ng>=0.8.0",
    "ecdsa>=0.18.0b1",
    "six>=1.9.0",
    "pytap>=0.1.0; platform_system=='Windows'",
    "pytuntap>=1.0.0; platform_system=='Windows'",
    "pydivert>=2.1.0; platform_system=='Windows'",
    "tuntap>=2.0.0; platform_system!='Windows'",
    "pytuntap>=1.0.0; platform_system!='Windows'",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
    "mypy>=0.910",
]

[project.urls]
Homepage = "https://github.com/proyy/PySslvpn"
"Bug Reports" = "https://github.com/proyy/PySslvpn/issues"
Source = "https://github.com/proyy/PySslvpn"

[project.scripts]
pysslvpn = "pysslvpn.cli:main"

[tool.setuptools.dynamic]
version = {attr = "pysslvpn.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
exclude = ["tests", "tests.*", "docs", "docs.*"]

[tool.black]
target-version = ['py37']
line-length = 88

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]